# doc/studentlist/swagger.json
@@ -58,11 +58,22 @@
                     "Students"
                 ],
                 "summary": "Create a new student.",
+                "parameters": [
+                    {
+                        "description": "CreateStudent",
+                        "name": "student",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Student"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Student"
+                            "type": "struct"
                         }
                     },
                     "404": {
@@ -74,7 +85,7 @@
                 }
             }
         },
-        "/student/:id": {
+        "/student/{id}": {
             "get": {
                 "description": "get one student by id from the database.",
                 "consumes": [
@@ -90,8 +101,8 @@
                 "operationId": "get-Student-by-id",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Student ID",
+                        "type": "integer",
+                        "description": "id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -101,7 +112,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "struct"
+                            "$ref": "#/definitions/models.Student"
                         }
                     },
                     "404": {
@@ -124,6 +135,17 @@
                     "Students"
                 ],
                 "summary": "Update a student.",
+                "parameters": [
+                    {
+                        "description": "UpdateStudent",
+                        "name": "student",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Student"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -151,6 +173,15 @@
                     "Students"
                 ],
                 "summary": "Delete a student.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
